--- a/native/Makefile64.win
+++ b/native/Makefile64.win
@@ -1,7 +1,10 @@
 all: clipboard.dll tmp.clipboard.h moveResult
 
-moveResult: 
-	mkdir .\..\library\Windows64 && move /Y clipboard.dll .\..\library\Windows64\clipboard.dll && move /Y clipboard.obj .\..\library\Windows64\clipboard.obj
+moveResult: createDir
+	move /Y clipboard.dll .\..\library\Windows64\clipboard.dll && move /Y clipboard.obj .\..\library\Windows64\clipboard.obj
+	
+createDir:
+	if not exist .\..\library\Windows64 mkdir .\..\library\Windows64
 
 clipboard.dll: clipboard.obj
 	cl /LD clipboard.obj
